--- a/scss/blocks/_about-promo.scss
+++ b/scss/blocks/_about-promo.scss
@@ -26,7 +26,7 @@
     }
     &-img__box{
         position: relative;
-        width: 37%;
+        width: 40%;
         margin-right: 30px;
         height: 100%;
     }
@@ -35,6 +35,121 @@
         top: -17%;
         left: 0;
         width: 100%;
-        height: 100%;
+    }
+}
+
+@media only screen and (max-width: 1300px) {
+    .about__promo{
+        height: 450px;
+        &-img{
+            top: -16%;
+        }
+        &-title{
+            font-size: 45px;
+        }
+        &-description{
+            font-size: 17px;
+
+        }
+    }
+}
+
+@media only screen and (max-width: 1220px) {
+    .about__promo{
+        height: 420px;
+        &-img{
+            top: -17%;
+        }
+        &-title{
+            font-size: 43px;
+        }
+        &-description{
+            font-size: 16px;
+
+        }
+    }
+}
+@media only screen and (max-width: 1130px) {
+    .about__promo{
+        height: 400px;
+        &-img{
+            top: -13%;
+        }
+        &-title{
+            font-size: 40px;
+            margin-bottom: 15px;
+            line-height: 1.1;
+        }
+        &-description{
+            font-size: 14px;
+            line-height: 1.7;
+
+        }
+    }
+}
+@media only screen and (max-width: 1000px) {
+    .about__promo{
+        height: 380px;
+        &-img{
+            top: -10%;
+        }
+        &-title{
+            font-size: 35px;
+        }
+        &-description{
+            font-size: 13px;
+
+        }
+    }
+}
+@media only screen and (max-width: 900px) {
+    .about__promo{
+        height: 350px;
+        &-img{
+            top: -6%;
+        }
+        &-title{
+            font-size: 31px;
+        }
+        &-description{
+            font-size: 12px;
+
+        }
+    }
+}
+
+@media only screen and (max-width: 785px) {
+    .about__promo{
+        margin-top: 30%;
+        flex-direction: column-reverse;
+        justify-content: space-around;
+        height: 490px;
+        &-info{
+            width: 80%;
+            text-align: center;
+            margin-bottom: 50px;
+        }
+
+        &-title{
+            width: 100%;
+            margin: auto;
+            font-size: 40px;
+            margin-bottom: 30px;
+        }
+        &-description{
+            width: 100%;
+            margin: auto;
+            font-size: 16px;
+
+        }
+        &-img__box{
+            width: 80%;
+        }
+        &-img{
+            top: -80%;
+            left: 18%;
+            width: 70%;
+            border-radius: 30px;
+        }
     }
 }
