--- a/scss/blocks/_plan-coffee-plan.scss
+++ b/scss/blocks/_plan-coffee-plan.scss
@@ -39,6 +39,7 @@
         display: flex;
         align-items: center;
         justify-content: start;
+        z-index: 1;
     }
 
 
@@ -75,6 +76,7 @@
         align-items: center;
         margin: 5px 0 30px 0;
         display: none;
+
     }
 
     &--card{
@@ -82,7 +84,7 @@
         height: 100%;
         padding: 30px 12px 80px 16px;
         background-color: #C5DBCF;
-        transition: all .2s ease-in-out;
+        overflow: hidden;
     }
 
     &--card:hover{
@@ -139,11 +141,31 @@
 
 
 .plan-card{
-    display: flex !important;
-    // justify-content: space-between;
-    // align-items: center;
-    // margin: 10px 0;
+    animation: openCard 1.5s ease;
+    display: flex;
 }
+
+@keyframes openCard {
+    0%{
+        position: relative;
+        top: 0%;
+        width: 100%;
+        height: 0;
+        
+    }
+    100%{
+        // position: relative;
+        // top: 0%;
+        width: 100%;
+        height: 100%;
+    }
+}
+@keyframes closeCard {
+    
+    
+}
+
+
 
 .current{
     font-weight: 500;
@@ -154,6 +176,12 @@
     border-bottom: 3px dashed #C99B67;
     padding-bottom: 5px;
 }
+
+
+
+
+
+
 
 // .coffee_plan::after{
 //     content: "";
